2004-04-29  James Henstridge  <james@daa.com.au>

	* modulesets/freedesktop.modules (hicolor-icon-theme): add MD5
	sum.

	* modulesets/gnome28.modules: same updates as in gnome26.

	* modulesets/gnome26.modules (scrollkeeper, audiofile,
	gnutls+friends, xchat, camorama): add MD5 sums to tarball entries.

	* modulesets/moduleset.dtd: update DTD for md5sum attribute on
	<source> elements.

	* modulesets/bootstrap.modules: add MD5 sums to all bootstrap
	modules.

	* jhbuild/modtypes/tarball.py (Tarball.get_localfile): new method
	to get the location of the local filename for the tarball.  Use
	config.tarballdir instead of checkoutroot.

	* jhbuild/config.py: add tarballdir config key that defaults to
	checkoutroot.

2004-04-28  James Henstridge  <james@daa.com.au>

	* jhbuild/modtypes/tarball.py (Tarball.__init__): add md5
	attribute.
	(Tarball.check_localfile): move download verification stuff here.
	(Tarball.do_download): use check_localfile() to check result of
	download.

2004-04-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome26.modules (eog): use gnome-2-6 branch.

2004-04-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome26.modules:
	use gnome-2-6 branches for libgnomeprint(ui).

2004-04-24  James Henstridge  <james@daa.com.au>

	* jhbuild/config.py (Config.setup_env): fix up error when we can't
	create the prefix.  Fix from Vee Satayamas <veetai@yahoo.com>
	(from bug #140999).

2004-04-23  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules (libcroco): use gnome-2-6 branch
	(fixes bug 140797).

2004-04-20  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules (gnome-icon-theme): use gnome-2-6 branch.
	(atk): use gnome-2-6 branch.
	(gnome-keyring): use gnome-2-6 branch.
	(gnome-control-center): use gnome-2-6 branch.
	(gtksourceview): use gnome-2-6 branch.

2004-04-18  James Henstridge  <james@daa.com.au>

	* jhbuild/main.py (main): add a -m argument to override the