@@ -60,3 +60,6 @@ tinderbox_outputdir = None
 
 # sticky date to perform historic checkouts
 sticky_date = None
+
+# whether to try and pretty print the output
+pretty_print = True
