@@ -1,3 +1,11 @@
+2004-04-30  James Henstridge  <james@daa.com.au>
+
+	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute): if
+	not pretty_print, don't try to syntax highlight output.
+
+	* jhbuild/config.py (_known_keys): add pretty_print option, that
+	defaults to True.
+
 2004-04-29  James Henstridge  <james@daa.com.au>
 
 	* modulesets/freedesktop.modules (hicolor-icon-theme): add MD5
